# magnumSimpleVisualizer

./: CMakeLists.txt  LICENSE  README.md
h/magnumSimpleVisualizer/: magnumVisualizer.h
src/: VertexColorId.frag  VertexColorId.vert  main.cpp  resources.conf
